tests/fixtures/errors/assign_immutable.ore
fn main
  x := 42
  x = 10
